fixed footer area overlapping create art piece button

--- a/app/assets/stylesheets/change_map_icon_sizes.css
+++ b/app/assets/stylesheets/change_map_icon_sizes.css
@@ -21,7 +21,7 @@
   background-color: transparent;
   border: 10px solid transparent
 }
-.btn-default {
+.theButton {
   height:35px;
   width:50px;
   background-color: transparent;
